manifest/5-log-be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: log-be-ingress
  namespace: dev-log
spec:
  rules:
  - host: dev.viettellogistics.com.vn
    http:
      paths:
      - backend:
          service:
            name: log-be
            port: 
              number: 9100
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev.viettellogistics.com.vn
    secretName: viettellogistics
